--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -17,12 +17,15 @@
     </head>
 
     <body>
+        <div id="mydiv">
+
+        </div>
         <!--put your initial page content here-->
 
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
 
-        <!--put your external script links here-->
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="lib/jquery-3.5.1.js"></script>
+        <script type="text/javascript" src="js/main_with_debug.js"></script>
     </body>
 </html>
