--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -26,6 +26,6 @@
         place these within <script> tags-->
 
         <script type="text/javascript" src="lib/jquery-3.5.1.js"></script>
-        <script type="text/javascript" src="js/main_with_debug.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
